--- a/fly-web/src/main/resources/templates/index.html
+++ b/fly-web/src/main/resources/templates/index.html
@@ -575,69 +575,6 @@
 
                 <div class="fly-panel fly-rank fly-rank-reply" id="LAY_replyRank">
                     <h3 class="fly-panel-title">回贴周榜</h3>
-                    <dl>
-                        <!--<i class="layui-icon fly-loading">&#xe63d;</i>-->
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                        <dd>
-                            <a href="user/home.html">
-                                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-                            </a>
-                        </dd>
-                    </dl>
                 </div>
 
                 <dl class="fly-panel fly-list-one">
@@ -646,10 +583,10 @@
 
                 <div class="fly-panel">
                     <div class="fly-panel-title">
-                        这里可作为广告区域
+                        欢迎给个Star哦
                     </div>
                     <div class="fly-panel-main">
-                        <a href="http://layim.layui.com/?from=fly" target="_blank" class="fly-zanzhu" time-limit="2017.09.25-2099.01.01" style="background-color: #5FB878;">LayIM 3.0 - layui 旗舰之作</a>
+                        <a href="https://github.com/fanpan26/Fly.SpringCloud" target="_blank" class="fly-zanzhu" time-limit="2017.09.25-2099.01.01" style="background-color: #5FB878;">本站源码 - Fly.SpringCloud</a>
                     </div>
                 </div>
 
