--- a/fly-web/src/main/resources/templates/jie/add.html
+++ b/fly-web/src/main/resources/templates/jie/add.html
@@ -85,7 +85,7 @@
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
-                                    <label for="L_vercode" class="layui-form-label">人类验证</label>
+                                    <label for="L_vercode" class="layui-form-label">验证码</label>
                                     <div class="layui-input-inline">
                                         <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
                                     </div>
