--- a/fly-web/src/main/resources/templates/jie/detail.html
+++ b/fly-web/src/main/resources/templates/jie/detail.html
@@ -85,7 +85,7 @@
 
                 <div class="fly-panel">
                     <div class="fly-panel-title">
-                        山东临沂欢迎您
+                        欢迎给个Star哦
                     </div>
                     <div class="fly-panel-main">
                         <a href="https://github.com/fanpan26/Fly.SpringCloud" target="_blank" class="fly-zanzhu" time-limit="2017.09.25-2099.01.01" style="background-color: #5FB878;">本站源码 - Fly.SpringCloud</a>
